# raft-cpp

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: logging.h
core/src/: data.cpp
src/: main.cpp
